# CLDL-CUDA

./: CMakeLists.txt  README.md
ecg_filt_test/: CMakeLists.txt  README.md  ecg_test.cu
gtest/: CMakeLists.txt
lib/: Layer.cu
